# coinicles-network

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  coiniclesnet-bootstrap  coiniclesnet-bootstrap.ps1  lokinet-bootstrap  lokinet-bootstrap.ps1  lokinet-docker.ini  module.modulemap  readme.md  readme_es.md  run-coiniclesnet.bat
android/: AndroidManifest.xml  build.gradle  build.xml  settings.gradle
cmake/: GenVersion.cmake  basic_definitions.cmake  installer.cmake  macos_installer_deps.cmake  shadow.cmake
contrib/: gpl-3.0.txt  readme-installer.txt
daemon/: CMakeLists.txt  coiniclesnetctl.cpp  main.cpp
debian/: changelog  coinicles-service-nodes.7  coiniclesnet-bootstrap.1  coiniclesnet.1  coiniclesnet.manpages  coiniclesnet.service  control  copyright  lokinet.install  postinst
docker/: loki-svc-kubernetes.Dockerfile  router.Dockerfile
docs/: README  api_v0.txt  high-level.txt  linux-setcap-readme.txt  lokinet_admin_v0.txt  proto_v0.txt
include/: llarp.h
jni/: CMakeLists.txt  coiniclesnet_config.cpp  coiniclesnet_jni_common.hpp  coiniclesnet_jni_vpnio.hpp  coiniclesnet_vpn.cpp  lokinet_daemon.cpp  lokinet_jni_vpnio.hpp  network_coinicles_coiniclesnet_CoiniclesnetConfig.h  network_coinicles_coiniclesnet_CoiniclesnetDaemon.h  network_coinicles_coiniclesnet_Coiniclesnet_JNI.h  network_loki_lokinet_LokinetVPN.h  network_loki_lokinet_LokinetVPN_VPNInfo.h
libabyss/: main.cpp
llarp/: CMakeLists.txt  testnet.c
win32-setup/: Makefile  config_migration.bat  lokinet-win32.iss  notes.txt  regdb_helper.c
(+117 files in other folders)
